crates/functions/src/tests/conversion/snapshots/to_timestamp/query_timestamp_date.snap
---
source: crates/functions/src/tests/conversion/to_timestamp.rs
description: "\"SELECT TO_TIMESTAMP('2022-01-01 11:30:00'::date) as t\""
---
Ok(
    [
        "+---------------------+",
        "| t                   |",
        "+---------------------+",
        "| 2022-01-01T00:00:00 |",
        "+---------------------+",
    ],
)
