crates/functions/src/tests/conversion/snapshots/to_timestamp/query_timestamp_out_nanos_range.snap
---
source: crates/functions/src/tests/conversion/to_timestamp.rs
description: "\"SELECT\n        TO_TIMESTAMP('9999-12-31 00:00:02') as t,\n        TO_TIMESTAMP('9999-12-31 00:00:02.000912')as t2,\n        TO_TIMESTAMP('9999-12-31 00:00:02.000912123') as t3,\n        TO_TIMESTAMP('31-Dec-9999 00:00:02.000912123') as t4,\n        TO_TIMESTAMP('31-12-9999 00:00:02.000912123') as t5,\n        TO_TIMESTAMP('9999-12-31 00:00:00.000 +0000') as t6\""
---
Ok(
    [
        "+---------------------+----------------------------+----------------------------+----------------------------+----------------------------+---------------------+",
        "| t                   | t2                         | t3                         | t4                         | t5                         | t6                  |",
        "+---------------------+----------------------------+----------------------------+----------------------------+----------------------------+---------------------+",
        "| 9999-12-31T00:00:02 | 9999-12-31T00:00:02.000912 | 9999-12-31T00:00:02.000912 | 9999-12-31T00:00:02.000912 | 9999-12-31T00:00:02.000912 | 9999-12-31T00:00:00 |",
        "+---------------------+----------------------------+----------------------------+----------------------------+----------------------------+---------------------+",
    ],
)
